code up to date

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,11 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Basic SEO Meta Tags -->
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/pics/myImg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Welcome to Narayan Bhojak's frontend development portfolio. Showcasing responsive designs, interactive web apps, and modern UI/UX."
+    />
+    <meta
+      name="keywords"
+      content="Narayan Bhojak, frontend developer, web developer, portfolio, HTML, CSS, JavaScript, Bootstrap, projects"
+    />
+    <meta name="author" content="Narayan Bhojak" />
+
+    <!-- Open Graph Meta Tags (Used by Facebook, LinkedIn and other platforms for preview) -->
+    <meta
+      property="og:title"
+      content="Narayan Bhojak | Frontend Developer Portfolio"
+    />
+    <meta
+      property="og:description"
+      content="Explore my frontend web projects and skills including weather apps, video calls, and more."
+    />
+    <meta
+      property="og:image"
+      content="https://your-domain.com/images/portfolio-preview.png"
+    />
+    <!-- Replace the above link with your actual hosted image URL -->
+    <meta property="og:url" content="https://your-portfolio-url.com" />
+    <meta property="og:type" content="website" />
+
+    <!-- Twitter Card Meta Tags (Used when sharing on Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Narayan Bhojak | Frontend Developer" />
+    <meta
+      name="twitter:description"
+      content="Building responsive, user-friendly websites with HTML, CSS, JavaScript. See my work."
+    />
+    <meta
+      name="twitter:image"
+      content="https://your-domain.com/images/portfolio-preview.png"
+    />
+    <!-- Replace the above link with your actual hosted image URL -->
+
+    <!-- Google Search Console Verification -->
+    <meta
+      name="google-site-verification"
+      content="_4LH5qwxHhjMBahi1WKw-7Y12HR80tBKvoYfwlXZthI"
+    />
+
     <title>Narayan Bhojak | Portfolio</title>
   </head>
+
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
